# HRMS_Tool

./: .gitignore  holidays.json  leave_limits.json  leave_policy.json
.emergent/: emergent.yml
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  server.py
backend/core/: balances.py  config.py  config_store.py  digest.py  holidays.py  leave_hygiene.py  leave_limits.py  leave_policy.py  loaders.py  occasions.py  scheduled_tasks.py  security.py  slack.py  status_history.py  time.py  workdays.py
backend/db/: database.py
backend/models/: app_config.py  catchups.py  leaves.py  status_events.py  users.py
backend/routes/: admin.py  auth.py  catchups.py  dashboard.py  leaves.py  slack_bot.py  users.py
backend/schemas/: admin.py  catchups.py  leaves.py  slack_bot.py  status_events.py  users.py
backend/seed/: seed_users.py
backend/services/: admin_users.py  catchup_resources.py  doc_template.py  google_calendar.py  google_docs.py
backend/tests/: conftest.py  helpers.py  test_admin_user_management.py  test_config_store.py  test_dashboard_calendar.py  test_leave_approve.py  test_leave_create.py  test_leave_hygiene.py  test_leave_limits.py  test_leave_policy.py  test_leave_reject.py  test_leave_summary.py  test_leave_working_days.py  test_manager_view.py  test_status_events.py  test_user_balances.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
memory/: PRD.md
slack_myleave/: .env.example  README.md  api.js  app.js  directory.js  leaveRules.js  package-lock.json  package.json  (+5 more)
(+69 files in other folders)
