[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.3.1",
    "itsdangerous>=2.2.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "slack-sdk>=3.42.0",
    "sqlalchemy>=2.0.51",
    "starlette>=0.49.3",
    "uvicorn[standard]>=0.39.0",
]
